# tractable_take_home_task

./: .gitignore  Readme.md  pyproject.toml  tractable.ipynb
