[tool.poetry]
name = "tractable_challenge"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.5"
numpy = "^1.19.4"
matplotlib = "^3.3.3"
scikit-learn = "^0.23.2"
scipy = "^1.5.4"
seaborn = "^0.11.0"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
